@@ -1,2 +1,3 @@
 DIST arrayfire-3.1.20151111.tar.gz 35015 SHA256 6992ac07645dbafbfda0c73a2c3eb94ba03d6a941593d94da42126d6310f0633 SHA512 7a3e359eaf61e7d8234451671941f37f613a77ea4d1d22ac7dc6cd9a0b40a2ca098eb03b8d0778537c5012aca6cb5bc986a056b3cdf15e7d9f23417bf3c6a60d WHIRLPOOL 1c1ba68e54e285b80c5c09328872f27a2e9cb8d002c13883ef4e66c94ebbc18a12bf5fe683215922af5c9d5ac09f2957010a1ef2145fded1e838a632077658c5
 DIST arrayfire-3.2.20151214.tar.gz 39104 SHA256 9bd8a8bae1bcf62a003af582b23ff48615a658aec131f13534d0cd53d81bfd2c SHA512 c43934abf5e7d5927e45c13ace08e579f038fd593aed128916208b47d82813af1e9f9b8ef98a375ed6d27762c10734ca60e48a6e24c188a3f593a341db90e85d WHIRLPOOL bd9f8086e4ef597f400f094f2c3a2b137a9dc642d4b31e7a34e286de9a9447fbcd7df0acbaf69027d8a24590f0250b2a6b78d59572cfb4afaa0e71616080ac5a
+DIST arrayfire-3.2.20151224.tar.gz 39158 SHA256 446a8a1e74f2271f0f8cafcc4d144a1cd58d01de50b6f90cc0c2ef48d044434d SHA512 bd3bdab84835c1e112e4d7d159f76d02a0291bc1a82928918202abd524b296b47589dec7d432419006c0348e0741d07e7852d1ad943ae2640b78be3c057f94ed WHIRLPOOL c88e019ed288a05c78de7cd44f590b751c71ebecf957eed7c71d697c3fa026816f4731190de942c73b113c4f98d8f0de8274df619e97ac4c0f8da12b9ad73013
