@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*arrayfire-python-3.2.20151224 (25 Dec 2015)
+
+  25 Dec 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +arrayfire-python-3.2.20151224.ebuild:
+  dev-python/arrayfire-python: Version bump
+
 *arrayfire-python-3.2.20151214 (19 Dec 2015)
 
   19 Dec 2015; Marius Brehler <marbre@linux.sungazer.de>
